--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+#container {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#container h1 {
+  padding-left: 15%
+}
+#container h2 {
+  padding-left: 35%
+}
+#timerController {
+  padding-left: 50%
+}
 body {
   margin: 0;
   padding: 0;
